Add the TOXPYTHON trick for pypy envs too.

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,12 @@ basepython = {env:TOXPYTHON:python3.3}
 basepython = {env:TOXPYTHON:python3.4}
 
 [testenv:pypy]
+basepython = {env:TOXPYTHON:pypy}
+commands =
+    {posargs:py.test tests}
+
+[testenv:pypy3]
+basepython = {env:TOXPYTHON:pypy3}
 commands =
     {posargs:py.test tests}
 
