--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,9 @@
 envlist = py26,py27,pypy,py32,py33,py34,pypy3,docs,pep8,py2pep8,packaging
 
 [testenv]
+passenv =
+    LC_ALL
+    LANG
 deps =
     pretend
     scripttest
