--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ environment:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
     # /E:ON and /V:ON options are not enabled in the batch script intepreter
     # See: http://stackoverflow.com/a/13751649/163740
-    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\.appveyor\\run_with_env.cmd"
+    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\.appveyor\\appveyor-with-compiler.cmd"
 
   matrix:
     - PYTHON: "C:\\Python27"
@@ -43,11 +43,22 @@ environment:
       TOXENV: "py34"
       TOXPYTHON: "C:\\Python34-x64\\python.exe"
 
+    - PYTHON: "C:\\Python35"
+      PYTHON_VERSION: "3.5"
+      PYTHON_ARCH: "32"
+      TOXENV: "py35"
+      TOXPYTHON: "C:\\Python35\\python.exe"
+
+    - PYTHON: "C:\\Python35-x64"
+      PYTHON_VERSION: "3.5"
+      PYTHON_ARCH: "64"
+      TOXENV: "py35"
+      TOXPYTHON: "C:\\Python35-x64\\python.exe"
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
 
 install:
-  - "powershell .appveyor\\install.ps1"
+  - "python -u .appveyor\\appveyor-bootstrap.py"
 
 build: off
 
