--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,pypy,py32,py33,py34,pypy3,docs,pep8,py2pep8,packaging
+envlist = py26,py27,pypy,py32,py33,py34,py35,pypy3,docs,pep8,py2pep8,packaging
 
 [testenv]
 passenv = *
@@ -28,6 +28,9 @@ basepython = {env:TOXPYTHON:python3.3}
 
 [testenv:py34]
 basepython = {env:TOXPYTHON:python3.4}
+
+[testenv:py35]
+basepython = {env:TOXPYTHON:python3.5}
 
 [testenv:pypy]
 basepython = {env:TOXPYTHON:pypy}
