--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,49 +7,49 @@ environment:
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\.appveyor\\appveyor-with-compiler.cmd"
 
   matrix:
-    - PYTHON: "C:\\Python27"
+    - PYTHON_HOME: "C:\\Python27"
       PYTHON_VERSION: "2.7.9"
       PYTHON_ARCH: "32"
       TOXENV: "py27"
       TOXPYTHON: "C:\\Python27\\python.exe"
 
-    - PYTHON: "C:\\Python27-x64"
+    - PYTHON_HOME: "C:\\Python27-x64"
       PYTHON_VERSION: "2.7.9"
       PYTHON_ARCH: "64"
       TOXENV: "py27"
       TOXPYTHON: "C:\\Python27-x64\\python.exe"
 
-    - PYTHON: "C:\\Python33"
+    - PYTHON_HOME: "C:\\Python33"
       PYTHON_VERSION: "3.3.6"
       PYTHON_ARCH: "32"
       TOXENV: "py33"
       TOXPYTHON: "C:\\Python33\\python.exe"
 
-    - PYTHON: "C:\\Python33-x64"
+    - PYTHON_HOME: "C:\\Python33-x64"
       PYTHON_VERSION: "3.3.6"
       PYTHON_ARCH: "64"
       TOXENV: "py33"
       TOXPYTHON: "C:\\Python33-x64\\python.exe"
 
-    - PYTHON: "C:\\Python34"
+    - PYTHON_HOME: "C:\\Python34"
       PYTHON_VERSION: "3.4.2"
       PYTHON_ARCH: "32"
       TOXENV: "py34"
       TOXPYTHON: "C:\\Python34\\python.exe"
 
-    - PYTHON: "C:\\Python34-x64"
+    - PYTHON_HOME: "C:\\Python34-x64"
       PYTHON_VERSION: "3.4.2"
       PYTHON_ARCH: "64"
       TOXENV: "py34"
       TOXPYTHON: "C:\\Python34-x64\\python.exe"
 
-    - PYTHON: "C:\\Python35"
+    - PYTHON_HOME: "C:\\Python35"
       PYTHON_VERSION: "3.5"
       PYTHON_ARCH: "32"
       TOXENV: "py35"
       TOXPYTHON: "C:\\Python35\\python.exe"
 
-    - PYTHON: "C:\\Python35-x64"
+    - PYTHON_HOME: "C:\\Python35-x64"
       PYTHON_VERSION: "3.5"
       PYTHON_ARCH: "64"
       TOXENV: "py35"
