Use older coverage on py32.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ deps =
     pretend
     scripttest
     pytest
-    coverage
+    {py26,py27,pypy,py33,py34,py35}: coverage
+    {py32,pypy3}: coverage<4.0
     nameless
     tox
 commands =
